# codemov

./: .gitignore  Cargo.toml  README.md  cliff.toml  release-plz.toml
.github/workflows/: release-plz.yml
crates/codemov-cli/: Cargo.toml
crates/codemov-cli/src/: commands.rs  main.rs
crates/codemov-core/: Cargo.toml
crates/codemov-core/src/: lib.rs  tests.rs  tokens.rs  types.rs
crates/codemov-indexer/: Cargo.toml
crates/codemov-indexer/src/: indexer.rs  lib.rs  walker.rs
crates/codemov-indexer/tests/: integration.rs
crates/codemov-mcp/: Cargo.toml
crates/codemov-mcp/src/: main.rs  server.rs  tools.rs
crates/codemov-mcp/tests/: integration.rs
crates/codemov-parser/: Cargo.toml
crates/codemov-parser/src/: lib.rs  rust.rs  tests.rs  typescript.rs
crates/codemov-storage/: Cargo.toml
crates/codemov-storage/src/: context.rs  lib.rs  schema.rs  store.rs
fixtures/mixed-basic/src/: config.ts  main.rs
fixtures/rust-basic/src/: lib.rs
fixtures/ts-basic/src/: index.ts  utils.ts
