[package]
name = "codemov-cli"
description = "CLI for codemov — code intelligence for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "codemov"
path = "src/main.rs"

[dependencies]
codemov-core = { path = "../codemov-core" }
codemov-indexer = { path = "../codemov-indexer" }
codemov-storage = { path = "../codemov-storage" }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
