[package]
name = "codemov-cli"
description = "CLI for codemov — code intelligence for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "codemov"
path = "src/main.rs"

[dependencies]
codemov-core = { workspace = true }
codemov-indexer = { workspace = true }
codemov-storage = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
