[package]
name = "codemov-indexer"
description = "Codebase indexer that walks and parses source files for codemov"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
codemov-core = { workspace = true }
codemov-parser = { workspace = true }
codemov-storage = { workspace = true }
ignore = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
