[package]
name = "codemov-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codemov-mcp"
path = "src/main.rs"

[dependencies]
codemov-core = { path = "../codemov-core" }
codemov-storage = { path = "../codemov-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
codemov-indexer = { path = "../codemov-indexer" }
