[package]
name = "codemov-parser"
description = "Tree-sitter based source code parser for codemov"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
codemov-core = { path = "../codemov-core" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
thiserror = { workspace = true }
